--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,12 @@
         {% if guilds %}
             <div class="list-group">
                 {% for guild in guilds %}
-                    <a href="{{ url_for('edit_config', guild_id=guild.guild_id) }}" class="list-group-item list-group-item-action">
-                        ⚙️ Server ID: <strong>{{ guild.guild_id }}</strong>
+                    <a href="{{ url_for('edit_config', guild_id=guild.id) }}" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <img src="{{ guild.icon_url }}" alt="Icon" width="40" height="40" class="rounded me-3">
+                        <div>
+                            <h5 class="mb-0">{{ guild.name }}</h5>
+                            <small class="text-muted">ID: {{ guild.id }}</small>
+                        </div>
                     </a>
                 {% endfor %}
             </div>
