nang cap giao dien thuan tien hon

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             </a>
         {% endfor %}
     {% else %}
-        <p style="text-align: center; grid-column: 1 / -1;">Chưa có server nào được cấu hình.</p>
+        <p style="text-align: center; grid-column: 1 / -1; font-size: 1.2rem;">Chưa có server nào được cấu hình.</p>
     {% endif %}
 </div>
 {% endblock %}
